tests/snapshots/integration_test__log_data@352896e5646c57a1f508b3f8bf02af25.snap
---
source: tests/integration_test.rs
expression: record
info: "type=AUDIT_INTEGRITY_PCR msg=audit(1524662933.080:61207): errno=1"
---
{
  "record_type": "AUDIT_INTEGRITY_PCR",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "errno": "EPERM"
  }
}
