tests/snapshots/integration_test__log_data@36444e94f2bbcb6dd60918a7cee080cc.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/auparse/test2.log:5"
expression: result
info: "type=USER_ACCT msg=audit(1170021601.340:284): user pid=13015 uid=0 auid=4294967295 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: accounting acct=root : exe=\"/usr/sbin/crond\" hostname=? addr=? terminal=cron res=success'"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  pid=13015 uid=0 auid=4294967295 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: accounting acct=root : exe=\"/usr/sbin/crond\" hostname=? addr=? terminal=cron res=success'"
    }
  }
}
