tests/snapshots/integration_test__log_data@36f37c8322be05e3ae8746a48b70490a.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PATH msg=audit(1170021493.977:293): item=0 name=\"maildrop\" inode=14911367 dev=03:07 mode=040730 ouid=890 ogid=891 rdev=00:00 obj=system_u:object_r:postfix_spool_maildrop_t:s0"
---
{
  "record_type": "PATH",
  "timestamp": 1170021493977,
  "id": 293,
  "fields": {
    "dev": "03:07",
    "inode": "14911367",
    "item": "0",
    "mode": {
      "attributes": [],
      "file_type": "directory",
      "group": [
        "write",
        "exec"
      ],
      "other": [],
      "user": [
        "read",
        "write",
        "exec"
      ]
    },
    "name": "maildrop",
    "obj": "system_u:object_r:postfix_spool_maildrop_t:s0",
    "ogid": 891,
    "ouid": 890,
    "rdev": "00:00"
  }
}
